# training-system

./: .gitignore  AGENTS.md  README.md  pyproject.toml  redirect.py  start-https.sh
backend/: setup-postgres.sh  start-prod.sh
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: bookmark.py  certificate.py  course.py  department.py  enterprise.py  exam.py  file.py  learning_path.py  notification.py  review.py  sync_log.py  system_settings.py  task.py  user.py
backend/app/routers/: auth.py  bookmarks.py  certificates.py  courses.py  dashboard.py  departments.py  enterprise.py  exams.py  fetch_url.py  knowledge_graph.py  ldap.py  learning_paths.py  notifications.py  progress.py  reports.py  reviews.py  system.py  tasks.py  uploads.py  users.py  videos.py
backend/app/schemas/: certificate.py  course.py  exam.py  task.py  user.py
backend/app/services/: ldap_service.py
backend/app/utils/: auth.py  enterprise_connector.py  ldap_auth.py  notifications.py  rate_limit.py  storage.py
backend/uploads/html/: https___httpbin.org_html_28f3848e_1779045765.html
frontend/: cert.pem  index.html  key.pem  package-lock.json  package.json  start.sh  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  certificates.js  courses.js  departments.js  exams.js  index.js  tasks.js  users.js  videos.js
frontend/src/components/: AdminTable.vue  CategoryTags.vue  EmptyState.vue  PageHeader.vue  SearchInput.vue  SectionCard.vue
frontend/src/router/: index.js
frontend/src/styles/: design-tokens.css
tests/: comprehensive_test.py
(+38 files in other folders)
